Remove last comment directive at the end of line of the last \opt
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23223 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/system_options.tex
+++ b/manual/configure_rockbox/system_options.tex
@@ -195,18 +195,18 @@ this option \setting{On}. If it is not required, then turning this setting
         \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}%
         \opt{GIGABEAT_S_PAD,SANSA_CLIP_PAD,MROBE100_PAD,IRIVER_H10_PAD}%
             {\ButtonPower}%
-        \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonSelect+\ButtonRight}%
-    { }and %
+        \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonSelect+\ButtonRight}
+    and
         \opt{SANSA_E200_PAD,SANSA_C200_PAD}{Long \ButtonRec}%
         \opt{GIGABEAT_S_PAD,SANSA_CLIP_PAD,MROBE100_PAD,IRIVER_H10_PAD}%
             {Long \ButtonPower}%
-        \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonSelect+\ButtonLeft}%
-    { }keys, respectively.%
+        \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{\ButtonSelect+\ButtonLeft}
+    keys, respectively.%
     }%
     \opt{HAVEREMOTEKEYMAP}{
     Remote %
-        \opt{GIGABEAT_RC_PAD}{\ButtonRCDsp / Long \ButtonRCDsp}%
-    { }can also be used to switch modes.%
+        \opt{GIGABEAT_RC_PAD}{\ButtonRCDsp / Long \ButtonRCDsp}
+    can also be used to switch modes.%
     }%
     \newline\newline
     The following modes are available:
