--- a/manual/platform/mrobe100.tex
+++ b/manual/platform/mrobe100.tex
@@ -6,6 +6,8 @@
 \edef\UseOption{\UseOption,HAVE_DISK_STORAGE}
 \edef\UseOption{\UseOption,HAVE_BUTTON_LIGHTS}
 \edef\UseOption{\UseOption,olympus}
+\edef\UseOption{\UseOption,MROBE100_RC_PAD}
+\edef\UseOption{\UseOption,HAVEREMOTEKEYMAP}
 
 \newcommand{\playerman}{Olympus}
 \newcommand{\playertype}{m:robe 100}
@@ -23,3 +25,4 @@
 
 % link external keymap file
 \input{platform/keymap-mrobe100.tex}
+\input{platform/remote-keymap-mrobe100.tex}
