USB HID: Add mouse mode to h10
- Also fix bug where all other modes were not functional
- Hopefully fixes FS#10651 - H10 USB HID keymap problem


git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23228 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/system_options.tex
+++ b/manual/configure_rockbox/system_options.tex
@@ -566,6 +566,8 @@ this option \setting{On}. If it is not required, then turning this setting
             \opt{SANSA_E200_PAD,GIGABEAT_S_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD%
                 ,MROBE100_PAD}
               {\ButtonUp / \ButtonDown / \ButtonLeft / \ButtonRight}
+            \opt{IRIVER_H10_PAD}
+              {\ButtonScrollUp / \ButtonScrollDown / \ButtonLeft / \ButtonRight}
             \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
               {\ButtonMenu / \ButtonPlay / \ButtonLeft / \ButtonRight}
             \opt{HAVEREMOTEKEYMAP}{
@@ -579,6 +581,7 @@ this option \setting{On}. If it is not required, then turning this setting
                 ,IPOD_3G_PAD,IPOD_1G2G_PAD}
               {\ButtonSelect}
             \opt{GIGABEAT_S_PAD}{\ButtonSelect; \ButtonBack}
+            \opt{IRIVER_H10_PAD}{\ButtonPlay}
             \opt{MROBE100_PAD}{\ButtonMenu}
             \opt{HAVEREMOTEKEYMAP}{
                 &
@@ -598,6 +601,7 @@ this option \setting{On}. If it is not required, then turning this setting
             % Mouse wheel scroll up / down
             \opt{SANSA_E200_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
               {\ButtonScrollBack / \ButtonScrollFwd}
+            \opt{IRIVER_H10_PAD}{\ButtonRew / \ButtonFF}
             \opt{GIGABEAT_S_PAD}
               {\ButtonVolUp; \ButtonPrev / \ButtonVolDown; \ButtonNext}
             \opt{SANSA_C200_PAD,SANSA_CLIP_PAD,MROBE100_PAD}
