Update manual for the new "Skip to Outro" feature.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23230 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/config_file_options.tex
+++ b/manual/appendix/config_file_options.tex
@@ -132,7 +132,7 @@
     \opt{usb_charging}{
       usb charging  & on, off           & N/A\\
     }
-    skip length     & track, 1s, 2s, 3s, 5s, 7s, 10s, 15s, 20s, 1min,
+    skip length     & outro, track, 1s, 2s, 3s, 5s, 7s, 10s, 15s, 20s, 1min,
             90s, 2min, 3min, 5min, 10min, 15min & N/A\\
     prevent track skip
                     & on, off           & N/A\\
