--- a/manual/configure_rockbox/playback_options.tex
+++ b/manual/configure_rockbox/playback_options.tex
@@ -270,6 +270,9 @@ you to configure settings related to audio playback.
   \setting{Skip Length} changes the behavior of
   the \ActionWpsSkipPrev{} and \ActionWpsSkipNext{} buttons so that they skip
   by a given time instead of skipping to a new track.
+  The \setting{Skip to Outro} option changes the behavior so that the buttons
+  skip to just before the end of the track, so that the last few seconds are
+  played before the next track.
 
 \section{Prevent Track Skipping}\index{Prevent Track Skipping}
   If this option is enabled, the ability to manually skip tracks is disabled
