Correct a few misspellings of behaviour.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23231 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/playback_options.tex
+++ b/manual/configure_rockbox/playback_options.tex
@@ -215,7 +215,7 @@ you to configure settings related to audio playback.
     \setting{Auto-Change Directory} to function properly.\\}
 
   \note{This feature only works when songs have been played from the file
-    browser.  Using it with the database may cause unexpected behavior.}
+    browser.  Using it with the database may cause unexpected behaviour.}
 
   %
 \opt{headphone_detection}{
@@ -267,10 +267,10 @@ you to configure settings related to audio playback.
   
 \section{Skip Length}\index{Skip Length}
   Designed to speed up navigation when listening to long audio tracks,
-  \setting{Skip Length} changes the behavior of
+  \setting{Skip Length} changes the behaviour of
   the \ActionWpsSkipPrev{} and \ActionWpsSkipNext{} buttons so that they skip
   by a given time instead of skipping to a new track.
-  The \setting{Skip to Outro} option changes the behavior so that the buttons
+  The \setting{Skip to Outro} option changes the behaviour so that the buttons
   skip to just before the end of the track, so that the last few seconds are
   played before the next track.
 
